Fix spacing issue on desktop pt 3

--- a/blocks/src/blocks/motion-scroll/style.scss
+++ b/blocks/src/blocks/motion-scroll/style.scss
@@ -169,6 +169,7 @@
 			word-wrap: break-word;
 			overflow-wrap: break-word;
 			hyphens: auto;
+			font-size: var(--wp--preset--font-size--small);
 		}
 	}
 
